MDEV-35922 Server crashes in mhnsw_read_first upon using vector key with views