sql/item_vectorfunc.h
@@ -49,9 +49,9 @@ public:
   double val_real() override;
   Item *get_const_arg() const
   {
-    if (args[0]->type() == Item::FIELD_ITEM && args[1]->const_item())
+    if (args[0]->real_item()->type() == Item::FIELD_ITEM && args[1]->const_item())
       return args[1];
-    if (args[1]->type() == Item::FIELD_ITEM && args[0]->const_item())
+    if (args[1]->real_item()->type() == Item::FIELD_ITEM && args[0]->const_item())
       return args[0];
     return NULL;
   }
